--- a/clase5/package.json
+++ b/clase5/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "clase5",
+  "name": "47290-backend-clase-5",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "moment": "^2.29.4"
+  }
 }
